2002-02-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/regexpComp.test: updated regexp-11.[1-4] to match changes
	in regexp.test for new regsub syntax

	* unix/configure:
	* unix/tcl.m4: added --enable-64bit support for AIX-4 (using -q64
	flag) when using IBM's xlc compiler.

	* tests/safe.test: updated safe-8.5 and safe-8.7
	* library/safe.tcl (CheckFileName): removed the limit on
	sourceable file names (was only *.tcl or tclIndex files with no
	more than one dot and 14 chars).  There is enough internal
	protection in a safe interpreter already.  Fixes [Tk Bug #521560].

2002-02-22  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclCompCmds: [FR 465811]. Optimising [if], [for] and
	[while] for constant conditions; in addition, [for] and [while]
	are now compiled with the "loop rotation" optimisation (thanks to
	Kevin Kenny). 

2002-02-22  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	--- TIP#76 CHANGES ---
	* generic/tclCmdMZ.c (Tcl_RegsubObjCmd): Final-argument-less
	[regsub] returns the modified string.
	* doc/regsub.n: Updated docs.
	* tests/regexp.test: Updated and added tests.

	* compat/strtoll.c (strtoll): 
	* compat/strtoull.c (strtoull): 
	* unix/tclUnixPort.h:
	* win/tclWinPort.h: Const-ing 64-bit compatability declarations.
	Note that the return pointer is non-const because it is entirely
	legal for the functions to be called from somewhere that owns the
	string being passed.  Fixes problem reported by Larry Virden.

2002-02-21  David Gravereaux <davygrvy@pobox.com>

	* win/mkd.bat (removed):
	* win/coffbase.txt (new):
	* win/makefile.bc:
	* win/makefile.vc:  Changed the 'setup' target to stop using
	the mkd.bat file and just make the directory right in the rule.
	Same change to makefile.bc.  configure.in nor Makefile.in use
	it.

	coffbase.txt will be the master list for our "prefered base
	addresses" set by the linker.  This should improve load-time
	(NT only) by avoiding relocations.  Submissions to the list